# Smart_ARM

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  start.sh  supervisord.conf
ros_ws/src/smart_arm_demo/: CMakeLists.txt  package.xml
ros_ws/src/smart_arm_demo/config/: camera_model.yaml  ur5_controllers.yaml  ur5_gripper_controllers.yaml  workspace.yaml
ros_ws/src/smart_arm_demo/launch/: camera_view.launch  demo.launch  moveit_move_group.launch  nn_goal_moveit.launch  pick_place.launch  sim.launch
ros_ws/src/smart_arm_demo/scripts/: gazebo_attach_node.py  grasp_workspace.py  gripper_control.py  move_ur5_demo.py  neural_network_camera.py  nn_goal_moveit.py  pick_place_moveit.py
ros_ws/src/smart_arm_demo/urdf/: ur5_with_gripper.xacro
saved_worlds/: my_world.world
